# ribosoft

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  AmazonQ.md  COVERAGE_ANALYSIS.md  Dockerfile  Doxyfile  MODERNIZATION_SUMMARY.md  Pipfile  README.md  Ribosoft.sln  SECURITY.md  TEST_IMPROVEMENTS.md  UPGRADE_SUMMARY.md  _config.yml  _formulas.tex  build_output.txt  codecov.yml  coverlet.runsettings  custom.css  debug.txt  deps.json  dir_1d867e21f6e97cd14be4f329dbd982c0.html  dir_52638133c3b49e06de00d194c5e82851.html  dir_66e1622a031fb20f3f92681121501e89.html  dir_6c7c2ca1f994526d5730883c09b01a2f.html  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  fix_warnings.sh  functions_c.html  functions_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_m.html  functions_prop.html  functions_prop_b.html  functions_prop_f.html  (+17 more)
.docker/: appsettings.json  migrations.sh
.github/db/: appsettings.json
.github/deploy/: deploy.sh  secrets.tar.enc
.github/nuspec/: RibosoftAlgo-linux.nuspec  RibosoftAlgo-osx.nuspec  RibosoftAlgo-windows.nuspec
.github/workflows/: cmake.yml  codecov.yml  deploy.yml  docker-publish.yml  dotnet-core.yml  gh-pages.yml  publish-nuget.yml  ribosoft-algo-build.yml  robot.yml  uptime.yml
.travis/: appsettings.json  deploy.sh  deploy_key.enc  secrets.tar.enc
Doc/html/: _blast_parameters_8cs_source.html  _blaster_8cs.html  _blaster_8cs_source.html  _candidate_8cs.html  _candidate_8cs_source.html  _candidate_generation_8cs.html  _candidate_generation_8cs_source.html  _candidate_generation_exception_8cs.html  _candidate_generation_exception_8cs_source.html  _database_8cs.html  _database_8cs_source.html  _error_8cs.html  _error_8cs_source.html  _formulas.tex  _genbank_requests_8cs.html  _genbank_requests_8cs_source.html  _genbank_requests_exception_8cs.html  _genbank_requests_exception_8cs_source.html  _genbank_result_8cs.html  _genbank_result_8cs_source.html  _generate_candidates_8cs.html  _generate_candidates_8cs_source.html  _i_rankable_8cs.html  _i_rankable_8cs_source.html  _multi_objective_optimization_8cs.html  _multi_objective_optimization_8cs_source.html  _multi_objective_optimization_exception_8cs.html  _multi_objective_optimization_exception_8cs_source.html  _node_8cs.html  _node_8cs_source.html  _nucleotide_8cs.html  _nucleotide_8cs_source.html  _nucleotides_attribute_8cs.html  _nucleotides_attribute_8cs_source.html  _open_reading_frame_start_attribute_8cs.html  _open_reading_frame_start_attribute_8cs_source.html  _optimize_item_8cs.html  _optimize_item_8cs_source.html  _repeat_notations_attribute_8cs.html  _repeat_notations_attribute_8cs_source.html  (+145 more)
Ribosoft/: .babelrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Candidate.cs  DashboardAuthorizationFilter.cs  Dockerfile  Error.cs  FRONTEND_MODERNIZATION.md  HangfireStartupFilter.cs  Nucleotide.cs  Program.cs  Ribosoft.csproj  RibosoftAlgo.cs  SampleDllCall.cs  Sequence.cs  Startup.cs  Validation.cs  appsettings.json  bower.json  nlog.config  npm-shrinkwrap.json  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.vendor.js
Ribosoft.Tests/: Ribosoft.Tests.csproj  TestBiology.cs  TestCandidateGeneration.cs  TestError.cs  TestFolding.cs  TestInvalidGenbankRequests.cs  TestModels.cs  TestMultiObjectiveOptimization.cs  TestRibosoftAlgo.cs  TestValidGenbankRequests.cs  TestValidationAttributes.cs  UnitTest.cs  UnitTest1.cs
Ribosoft/.config/: dotnet-tools.json
Ribosoft/.docker/: 20210327162902_PreloadRibozymes.Designer.cs  (+3 more)
RibosoftAlgo/: CMakeLists.txt  README.md  RibosoftAlgo.Tests.csproj  RibosoftAlgo.csproj  build-cpp-tests.sh  build-native.sh  libRibosoftAlgo.so.2.2.0
RibosoftAlgo.Tests/: CppTestWrapper.cs  RibosoftAlgo.Tests.csproj  SimpleTest.cs  UnitTest1.cs  build-cpp-tests.sh
RibosoftAlgo/Tests/: CppTestWrapper.cs
RibosoftAlgo/cmake/: FindMELTING.cmake  FindRNA.cmake
RibosoftAlgo/include/catch/: catch.hpp
RibosoftAlgo/nuget/: CMakeLists.txt  RibosoftAlgo.nuspec
RibosoftAlgo/src/: CMakeLists.txt  accessibility.cpp  anneal.cpp  error.h  fold.cpp  functions.h  main.cpp  mfe_default_fold.cpp  snakefold.cpp  structure.cpp  validation.cpp
RibosoftAlgo/test/: CMakeLists.txt  main.cpp  test_accessibility.cpp  test_anneal.cpp  test_fold.cpp  test_structure.cpp  test_validation.cpp
custom/: doxy-boot.js  header.html
docs/: index.html  index.md
html/: _formulas.tex  _formulas_dark.tex  annotated.html  classes.html  dir_07cdeab881fbf6935355d56efa30cfba.html  dir_1d867e21f6e97cd14be4f329dbd982c0.html  dir_1e20a180c4246734f740d2292ce3071c.html  dir_1fb1206b3a6926a7b5aeaa8b154903e9.html  dir_3590a27c347d6300d5b02625ee808554.html  dir_46294241c785b197b3a2caed2f506878.html  dir_4e90559dfedcaee92335dcdd9567899a.html  dir_52638133c3b49e06de00d194c5e82851.html  dir_6452f31e853cbf8dd10c3736e3b11bf7.html  dir_66e1622a031fb20f3f92681121501e89.html  dir_6c2c1123d496daec2fd8eccb09b543e9.html  dir_6c7c2ca1f994526d5730883c09b01a2f.html  dir_72c1bbf276c1f92ac060d8180fd5bbea.html  dir_8e90880e9174959e40c06dd9a571de66.html  dir_ac638dfe624e96a6bfb997fa41925e36.html  dir_c29997898a4d4279e667670aac8bac91.html  dir_cb2ff6d008369c9f86b9e9daae89779e.html  dir_e5331acf4880a569609a187ebf33d14a.html  doxygen_crawl.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  (+58 more)
search/: all_10.js  all_3.js  all_4.js  all_d.js  all_e.js  classes_0.js  classes_10.js  classes_3.js  classes_6.js  classes_d.js  enums_1.js  enums_2.js  enums_5.js  functions_13.js  functions_6.js  functions_7.js  functions_b.js  functions_f.js  properties_0.js  properties_3.js  properties_9.js  properties_a.js  properties_d.js  properties_e.js  variables_0.js  variables_2.js  variables_5.js  variables_8.js  variables_b.js
test/: Pipfile
(+762 files in other folders)
